--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Anton" rel="stylesheet">
 
-<link rel="stylesheet" href="main.css"
+<link rel="stylesheet" href="main.css">
 
 </head> 
 
 <body> 
 
-<h1> <b>Summer Vacation! </b> </h1> 
+<h1> Summer Vacation! </h1> 
 
 <h2> Buffalo, New York  </h2> 
   
@@ -26,22 +26,24 @@
      imediate family loaded into a van made the trip. When in Buffalo I visited 3 places that i thought was interesting Niagara Falls, 
      The Nash House, and the Museum of Color Musicians Club. </p> 
 
-<h3> <a href="https://www.niagarafallsstatepark.com/">Niagara Falls</a> </h3>
+<h3> Niagara Falls </h3>
 
-<p> When I was at Niagara Falls my family and I took pictures. We did not bring our passports, so we could only take go to the American
-     side. I was upset about not being able to visit the Canadian side though, because my family members who live/visited the Candian side
+<p> When I was at <a href="https://www.niagarafallsstatepark.com/">Niagara Falls</a> my family and I took pictures. We did not bring our passports, so we could only take go to the American
+     side. I was upset about not being able to visit the Canadian side though, because my family members who live/visited the Canadian side
      says that the veiw was better. We also bought souvenirs like the tourist we were. </p>
 
-<img src="IMG_4406.JPG"> <alt="Niagara Falls"> 
-<img src="IMG_4403.JPG"> <alt="Me at Niagara Falls"> 
-<img src="IMG_4407.JPG"> <alt="Niagara Falls">    
+<img src="IMG_4406.JPG" alt="Niagara Falls"> 
+<img src="IMG_4403.JPG" alt="Me at Niagara Falls"> 
+<img src="IMG_4407.JPG" alt="Niagara Falls">    
 
-<h3> <a href=" http://www.nashhousemuseum.org/history.html"> Nash House</a> </h3> 
+<h3> Nash House </h3> 
  
-<p> After visiting Niagara Falls our tour bus took us to two museums in Buffalo. One of which being the Nash House. The Nash House was a 
-     museum in order to commemorate the life of Rev. J. Edward Nash. He was a pioneer in the African-American community during the first 50
+<p> After visiting Niagara Falls our tour bus took us to two museums in Buffalo. One of which being the <a href=" http://www.nashhousemuseum.org/history.html"> Nash House</a>. 
+     The Nash House was a museum in order to commemorate the life of <b> Rev. J. Edward Nash </b>. He was a pioneer in the African-American community during the first 50
      years of the 20th century, which lead him to be reveared and his house being turned into a museum. </p>
-
+</body> 
 
 <p> by Kody L. </p> 
+
+</html> 
 
